--- a/src/View/master.twig
+++ b/src/View/master.twig
@@ -29,6 +29,8 @@ and open the template in the editor.
             
             
         {% block rodape %}
+            <script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
+            <script src="../js/funcoes.js" type="text/javascript"> </script>
         {% endblock %}
     </body>
 </html>
