// Incluido js e ajax

--- a/src/View/produtos.twig
+++ b/src/View/produtos.twig
@@ -10,7 +10,7 @@
     <br>
     sobrescrevi o conteudo
     <br>
-    <button id="botao1" onclick="ajax();" value="valor_do_botao">Botão</button>
+    <button id="botao1"  value="valor_do_botao">Botão</button>
     <div id="div_retorno">
         <br>
         aqui será injetado o retorno
