--- a/src/View/produtos.twig
+++ b/src/View/produtos.twig
@@ -16,6 +16,10 @@
         aqui será injetado o retorno
     </div>
 
+    <div id="processando" style="display:none";>
+        <img src="img/ajax-loader.gif">
+        
+        
 {% endblock%}
 
 {% block rodape %}
