--- a/src/View/master.twig
+++ b/src/View/master.twig
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>{%block titulo %}{%endblock titulo%}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+       
         
     </head>
     <body>
@@ -34,4 +34,7 @@ and open the template in the editor.
             <script src="../js/funcoes.js" type="text/javascript"> </script>
         {% endblock %}
     </body>
+     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+  
 </html>
